--- a/qaudiodialog.ui
+++ b/qaudiodialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>460</width>
-    <height>153</height>
+    <width>409</width>
+    <height>138</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,7 @@
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_3">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
+       <layout class="QHBoxLayout" name="horizontalLayoutControl">
         <item>
          <widget class="QPushButton" name="pushButtonOpen">
           <property name="text">
@@ -150,14 +150,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QLabel" name="labelPosition">
-          <property name="minimumSize">
-           <size>
-            <width>60</width>
-            <height>0</height>
-           </size>
-          </property>
-         </widget>
+         <widget class="QLabel" name="labelPosition"/>
         </item>
        </layout>
       </item>
@@ -165,7 +158,24 @@
     </widget>
    </item>
    <item>
-    <widget class="QComboBox" name="comboBoxOutputDevice"/>
+    <layout class="QHBoxLayout" name="horizontalLayoutDevice">
+     <item>
+      <widget class="QComboBox" name="comboBoxOutputDevice"/>
+     </item>
+     <item>
+      <spacer name="horizontalSpacer_3">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
